--- a/chatbot/templates/index.html
+++ b/chatbot/templates/index.html
@@ -46,11 +46,23 @@ Kingspin - AI
                                     <li class="nav-item">
                                         <a class="page-scroll" href="#blog">Blog</a>
                                     </li>
-                                </ul>
+                                    
+                                    {% if not user.is_authenticated %}
+                                        <li class="nav-item">
+                                            <a class="" href="{% url 'login' %}">Login</a>
+                                        </li>
+                                    {% endif %}
+                                                                        </ul>
                             </div> <!-- navbar collapse -->
                             
                             <div class="navbar-btn d-none d-sm-inline-block">
-                                <a class="main-btn" data-scroll-nav="0" href="{%url 'logout'%}">LOGOUT</a>
+                                
+                                {% if user.is_authenticated %}
+                                    <a class="main-btn" data-scroll-nav="0" href="{%url 'user'%}">DASHBOARD</a>
+                                {% else %}
+                                    <a class="main-btn" data-scroll-nav="0" href="{%url 'register'%}">REGISTER</a>
+                                {% endif %}
+                                
                             </div>
                         </nav> <!-- navbar -->
                     </div>
