--- a/chatbot/templates/user/sidebar.html
+++ b/chatbot/templates/user/sidebar.html
@@ -9,7 +9,7 @@
         </div>
         <ul class="sidebar-menu">
             <li class="menu-header">Dashboard</li>
-            <li class="dlink active"><a class="nav-link" href=""><i class="fas fa-terminal"></i> <span>Conversation Console</span></a></li>
+            <li class="dlink active"><a class="nav-link" href="{% url 'user.dashboard.console' %}"><i class="fas fa-terminal"></i> <span>Conversation Console</span></a></li>
             <!-- <li class="dropdown">
                 <a href="#" class="nav-link has-dropdown"><i class="fas fa-fire"></i><span>Dashboard</span></a>
                 <ul class="dropdown-menu">
