--- a/chatbot/templates/auth/login.html
+++ b/chatbot/templates/auth/login.html
@@ -43,9 +43,9 @@
                           </a>
                         </div>
 
-                        <!-- {%for message in messages%}
+                        {%for message in messages%}
                         <p id="message" style="color: red">{{message}}</p>
-                        {%endfor%} -->
+                        {%endfor%}
                       </div>
 
                       {{login_form.password|add_class:"form-control"}}
