--- a/chatbot/templates/index.html
+++ b/chatbot/templates/index.html
@@ -62,7 +62,7 @@ Kingspin - AI
                                 {% else %}
                                     <a class="main-btn" data-scroll-nav="0" href="{%url 'register'%}">REGISTER</a>
                                 {% endif %}
-                                <span>{{request.user}}</span>
+                                <span style="color: #fff;">{{request.user}}</span>
 
                                 <a class="main-btn" data-scroll-nav="0" href="{%url 'logout'%}">LOGOUT</a>
 
