--- a/chatbot/templates/user/base.html
+++ b/chatbot/templates/user/base.html
@@ -25,6 +25,7 @@
 <link rel="stylesheet" href="{% static 'user/modules/izitoast/css/iziToast.min.css' %}">
 
 <!-- Template CSS -->
+<link rel="stylesheet" href="{% static 'css/animate.css' %}">
 <link rel="stylesheet" href="{% static 'user/css/style.min.css' %}">
 <link rel="stylesheet" href="{% static 'user/css/custom.css' %}">
 <link rel="stylesheet" href="{% static 'user/css/components.min.css' %}">
