--- a/chatbot/templates/auth/register.html
+++ b/chatbot/templates/auth/register.html
@@ -14,8 +14,8 @@ KingspinAI {% endblock title %}
       {%csrf_token%}
 
         <div class="form-group ">
-          {{register_form.username.label}}          
-          {{register_form.username|add_class:"form-control"}}          
+          {{register_form.name.label}}          
+          {{register_form.name|add_class:"form-control"}}          
         </div>
       
       <div class="form-group">
