--- a/unicorn/templates/unicorn/chatbot-settings.html
+++ b/unicorn/templates/unicorn/chatbot-settings.html
@@ -46,7 +46,7 @@
                         </div>
                     {% endif %}
                     <div class="form-group">
-                        <label>Telegram Key</label>
+                        <label>Bot Token</label>
                         <div class="input-group">
                         <div class="input-group-prepend">
                             <div class="input-group-text" style="background: radial-gradient( #1c92d2, #9ee8f7 );color:#fff;">
