--- a/chatbot/static/user/css/custom.css
+++ b/chatbot/static/user/css/custom.css
@@ -258,7 +258,30 @@ textarea:focus+.stdelete,textarea:focus+.redelete{
 .statement:hover .stdelete,.response:hover .redelete{
     opacity: 1;
 }
-
+.intent{
+    background: #0f0c29;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #24243e, #302b63, #0f0c29);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #24243e, #302b63, #0f0c29); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    border-radius: 10px;
+}
+.intent small{
+    color: #fff;
+    font-weight: bolder;
+    border-radius: 50%;
+}
+.intent input{
+    background: #fff2;
+    transition: background 0.5s !important;
+    color:white !important;
+    font-weight: bolder;
+    height: 25px !important;
+    text-align: center;
+    border-radius: 30px 30px 10px 10px;
+}
+.intent input:focus{
+    background: #0f0c29aa;    
+    transition: background 0.5s;
+}
 .touch .statement .stadd,.touch .response .readd{
     opacity: 1;
     transform: translateY(-50%) scale(1,1);
