--- a/chatbot/static/user/css/custom.css
+++ b/chatbot/static/user/css/custom.css
@@ -296,6 +296,33 @@ textarea:focus+.stdelete,textarea:focus+.redelete{
     background: #0f0c29aa;    
     transition: background 0.5s;
 }
+.entities{
+    background: #0f0c29;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #24243e, #302b63, #0f0c29);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #24243e, #302b63, #0f0c29); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */    
+    font-weight: bolder;
+    overflow: hidden;
+    border-radius:0px 0px 10px 10px;
+    margin-top: -8px;
+    position: relative;
+    z-index: -1;
+}
+.entities small{
+    font-weight: bolder;
+    color: whitesmoke;
+}
+.entities .entity{
+    display: inline-block;
+    color: #fff;
+    background: #ff00cc;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #333399, #ff00cc);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #333399, #ff00cc); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    padding: 3px 5px;
+    margin: 5px;
+    font-weight: bolder;
+    border-radius: 30px/40px;
+    box-shadow: -0.1rem 0 8px #ff00cc;
+}
 .touch .statement .stadd,.touch .response .readd{
     opacity: 1;
     transform: translateY(-50%) scale(1,1);
