--- a/unicorn/templates/unicorn/chatbot.html
+++ b/unicorn/templates/unicorn/chatbot.html
@@ -1,7 +1,7 @@
 {% load unicorn %}
 <div class="">
     <div class="row align-items-stretch">
-        {% if chatbots %}
+        {% if chatbots.length != 0 %}
             {% for chatbot in chatbots %}
                 <div class="col-md-4 mb-5">
                     <div class="card card-hero shadow mb-0 h-100 border-0 animated zoomIn chatbot hecon bg{{ chatbot.id|stringformat:'d'|last}}">
