--- a/chatbot/templates/auth/login.html
+++ b/chatbot/templates/auth/login.html
@@ -85,7 +85,7 @@
                       </button>
                     </div>
                   </form>
-                  <div class="text-center mt-4 mb-3">
+                  <!-- <div class="text-center mt-4 mb-3">
                     <div class="text-job text-muted">Login With Social</div>
                   </div>
                   <div class="row sm-gutters">
@@ -99,7 +99,7 @@
                         ><span class="fab fa-twitter"></span> Twitter</a
                       >
                     </div>
-                  </div>
+                  </div> -->
                 </div>
               </div>
               <div class="mt-5 text-muted text-center">
