--- a/chatbot/templates/auth/register.html
+++ b/chatbot/templates/auth/register.html
@@ -50,9 +50,9 @@ KingspinAI {% endblock title %}
         </div>
      
       
-          <label class="custom-control-label" for="agree"
+          <!-- <label class="custom-control-label" for="agree"
             >I agree with the terms and conditions</label
-          >
+          > -->
         </div>
       </div>
 
@@ -65,6 +65,9 @@ KingspinAI {% endblock title %}
         </button>
       </div>
     </form>
+    <div class="text-center">
+      Already have a account? <a href="{% url 'login' %}">Login</a>
+    </div>
   </div>
 </div>
 
