--- a/chatbot/templates/index.html
+++ b/chatbot/templates/index.html
@@ -40,12 +40,12 @@ Kingspin - AI
                                     <li class="nav-item">
                                         <a class="page-scroll" href="#facts">Why</a>
                                     </li>
-                                    <li class="nav-item">
+                                    <!-- <li class="nav-item">
                                         <a class="page-scroll" href="#team">Team</a>
                                     </li>
                                     <li class="nav-item">
                                         <a class="page-scroll" href="#blog">Blog</a>
-                                    </li>
+                                    </li> -->
                                     
                                     {% if not user.is_authenticated %}
                                         <li class="nav-item">
@@ -78,7 +78,7 @@ Kingspin - AI
                             <h3 class="header-sub-title wow fadeInUp mb-2" style="text-shadow: 0 0 10px white;" data-wow-duration="1.3s" data-wow-delay="0.2s"><big>Kingspin AI</big></h3>
                             <h2 class="header-title wow fadeInUp" data-wow-duration="1.3s" data-wow-delay="0.5s">Chatbot that Redefines Productivity</h2>
                             <p class="text wow fadeInUp" data-wow-duration="1.3s" data-wow-delay="0.8s">Enhance your customer interaction through our elegant conversational solution</p>
-                            <a href="#" class="main-btn wow fadeInUp" data-wow-duration="1.3s" data-wow-delay="1.1s">Get Started</a>
+                            <!-- <a href="{%url 'register'%}" class="main-btn wow fadeInUp" data-wow-duration="1.3s" data-wow-delay="1.1s">Get Started</a> -->
                         </div> <!-- header hero content -->
                     </div>
                 </div> <!-- row -->
@@ -97,7 +97,7 @@ Kingspin - AI
     <!--====== HEADER PART ENDS ======-->
     
     <!--====== BRAMD PART START ======-->
-    
+    <!-- 
     <div class="brand-area pt-90">
         <div class="container">
             <div class="row">
@@ -105,24 +105,24 @@ Kingspin - AI
                     <div class="brand-logo d-flex align-items-center justify-content-center justify-content-md-between">
                         <div class="single-logo mt-30 wow fadeIn" data-wow-duration="1s" data-wow-delay="0.2s">
                             <img src="{% static 'images/brand-1.png' %}" alt="brand">
-                        </div> <!-- single logo -->
+                        </div> 
                         <div class="single-logo mt-30 wow fadeIn" data-wow-duration="1.5s" data-wow-delay="0.2s">
                             <img src="{% static 'images/brand-2.png' %}" alt="brand">
-                        </div> <!-- single logo -->
+                        </div> 
                         <div class="single-logo mt-30 wow fadeIn" data-wow-duration="1.5s" data-wow-delay="0.3s">
                             <img src="{% static 'images/brand-3.png' %}" alt="brand">
-                        </div> <!-- single logo -->
+                        </div> 
                         <div class="single-logo mt-30 wow fadeIn" data-wow-duration="1.5s" data-wow-delay="0.4s">
                             <img src="{% static 'images/brand-4.png' %}" alt="brand">
-                        </div> <!-- single logo -->
+                        </div> 
                         <div class="single-logo mt-30 wow fadeIn" data-wow-duration="1.5s" data-wow-delay="0.5s">
                             <img src="{% static 'images/brand-5.png' %}" alt="brand">
-                        </div> <!-- single logo -->
-                    </div> <!-- brand logo -->
+                        </div> 
+                    </div> 
                 </div>
-            </div>   <!-- row -->
-        </div> <!-- container -->
-    </div>
+            </div> 
+        </div> 
+    </div> -->
     
     <!--====== BRAMD PART ENDS ======-->
     
@@ -344,16 +344,16 @@ Kingspin - AI
     
     <!--====== TEAM PART START ======-->
     
-    <section id="team" class="team-area pt-120">
+    <!-- <section id="team" class="team-area pt-120">
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-lg-5">
                     <div class="section-title text-center pb-30">
                         <div class="line m-auto"></div>
                         <h3 class="title"><span>Meet Our</span> Creative Team Members</h3>
-                    </div> <!-- section title -->
+                    </div>
                 </div>
-            </div> <!-- row -->
+            </div>
             <div class="row justify-content-center">
                 <div class="col-lg-4 col-md-7 col-sm-8">
                     <div class="single-team text-center mt-30 wow fadeIn" data-wow-duration="1s" data-wow-delay="0.2s">
@@ -372,7 +372,7 @@ Kingspin - AI
                             <h5 class="holder-name"><a href="#">Isabela Moreira</a></h5>
                             <p class="text">Founder and CEO</p>
                         </div>
-                    </div> <!-- single team -->
+                    </div>
                 </div>
                 <div class="col-lg-4 col-md-7 col-sm-8">
                     <div class="single-team text-center mt-30 wow fadeIn" data-wow-duration="1s" data-wow-delay="0.5s">
@@ -391,7 +391,7 @@ Kingspin - AI
                             <h5 class="holder-name"><a href="#">Elon Musk</a></h5>
                             <p class="text">Sr. Software Engineer</p>
                         </div>
-                    </div> <!-- single team -->
+                    </div>
                 </div>
                 <div class="col-lg-4 col-md-7 col-sm-8">
                     <div class="single-team text-center mt-30 wow fadeIn" data-wow-duration="1s" data-wow-delay="0.8s">
@@ -410,16 +410,16 @@ Kingspin - AI
                             <h5 class="holder-name"><a href="#">Fiona Smith</a></h5>
                             <p class="text">Business Development Manager</p>
                         </div>
-                    </div> <!-- single team -->
+                    </div>
                 </div>
-            </div> <!-- row -->
-        </div> <!-- container -->
-    </section>
+            </div>
+        </div>
+    </section> -->
     
     <!--====== TEAM PART ENDS ======-->
     
     <!--====== TESTIMONIAL PART START ======-->
-    
+    <!-- 
     <section id="testimonial" class="testimonial-area pt-120">
         <div class="container">
             <div class="row justify-content-center">
@@ -427,9 +427,9 @@ Kingspin - AI
                     <div class="section-title text-center pb-40">
                         <div class="line m-auto"></div>
                         <h3 class="title">Users sharing<span> their experience</span></h3>
-                    </div> <!-- section title -->
+                    </div>
                 </div>
-            </div> <!-- row -->
+            </div>
             <div class="row testimonial-active wow fadeInUpBig" data-wow-duration="1s" data-wow-delay="0.8s">
                 <div class="col-lg-4">
                     <div class="single-testimonial">
@@ -460,7 +460,7 @@ Kingspin - AI
                                 <p class="text">CEO, SpaceX</p>
                             </div>
                         </div>
-                    </div> <!-- single testimonial -->
+                    </div>
                 </div>
                 <div class="col-lg-4">
                     <div class="single-testimonial">
@@ -491,7 +491,7 @@ Kingspin - AI
                                 <p class="text">UX Specialist, Yoast</p>
                             </div>
                         </div>
-                    </div> <!-- single testimonial -->
+                    </div>
                 </div>
                 <div class="col-lg-4">
                     <div class="single-testimonial">
@@ -522,7 +522,7 @@ Kingspin - AI
                                 <p class="text">CTO, Alphabet</p>
                             </div>
                         </div>
-                    </div> <!-- single testimonial -->
+                    </div>
                 </div>
                 <div class="col-lg-4">
                     <div class="single-testimonial">
@@ -553,16 +553,16 @@ Kingspin - AI
                                 <p class="text">COO, MakerFlix</p>
                             </div>
                         </div>
-                    </div> <!-- single testimonial -->
+                    </div>
                 </div>
-            </div> <!-- row -->
-        </div> <!-- container -->
-    </section>
+            </div>
+        </div>
+    </section> -->
     
     <!--====== TESTIMONIAL PART ENDS ======-->
     
     <!--====== BLOG PART START ======-->
-    
+    <!-- 
     <section id="blog" class="blog-area pt-120">
         <div class="container">
             <div class="row">
@@ -570,9 +570,9 @@ Kingspin - AI
                     <div class="section-title pb-35">
                         <div class="line"></div>
                         <h3 class="title"><span>Our Recent</span> Blog Posts</h3>
-                    </div> <!-- section title -->
+                    </div>
                 </div>
-            </div> <!-- row -->
+            </div>
             <div class="row justify-content-center">
                 <div class="col-lg-4 col-md-7">
                     <div class="single-blog mt-30 wow fadeIn" data-wow-duration="1s" data-wow-delay="0.2s">
@@ -587,7 +587,7 @@ Kingspin - AI
                             <p class="text">Lorem ipsuamet conset sadips cing elitr seddiam nonu eirmod tempor invidunt labore.</p>
                             <a class="more" href="#">Learn More <i class="lni-chevron-right"></i></a>
                         </div>
-                    </div> <!-- single blog -->
+                    </div>
                 </div> 
                 <div class="col-lg-4 col-md-7">
                     <div class="single-blog mt-30 wow fadeIn" data-wow-duration="1s" data-wow-delay="0.5s">
@@ -602,7 +602,7 @@ Kingspin - AI
                             <p class="text">Lorem ipsuamet conset sadips cing elitr seddiam nonu eirmod tempor invidunt labore.</p>
                             <a class="more" href="#">Learn More <i class="lni-chevron-right"></i></a>
                         </div>
-                    </div> <!-- single blog -->
+                    </div>
                 </div> 
                 <div class="col-lg-4 col-md-7">
                     <div class="single-blog mt-30 wow fadeIn" data-wow-duration="1s" data-wow-delay="0.8s">
@@ -617,12 +617,12 @@ Kingspin - AI
                             <p class="text">Lorem ipsuamet conset sadips cing elitr seddiam nonu eirmod tempor invidunt labore.</p>
                             <a class="more" href="#">Learn More <i class="lni-chevron-right"></i></a>
                         </div>
-                    </div> <!-- single blog -->
+                    </div>
                 </div> 
-            </div> <!-- row -->
-        </div> <!-- container -->
+            </div>
+        </div>
     </section>
-    
+     -->
     <!--====== BLOG PART ENDS ======-->
     
     <!--====== FOOTER PART START ======-->
@@ -632,8 +632,8 @@ Kingspin - AI
             <div class="subscribe-area wow fadeIn" data-wow-duration="1s" data-wow-delay="0.5s">
                         <div class="text-center">
                             <h2 >Upgrade your Customer Experience with Conversational AI</h2>
-                            <br>
-                            <button class="main-btn">Subscribe</button>
+                            <!-- <br>
+                            <button class="main-btn">Subscribe</button> -->
                         </div>
                  <!-- row -->
             </div> <!-- subscribe area -->
@@ -699,9 +699,10 @@ Kingspin - AI
             <div class="footer-copyright">
                 <div class="row">
                     <div class="col-lg-12">
-                        <div class="copyright d-sm-flex justify-content-between">
+                        <div class="copyright d-sm-flex justify-content-center">
                             <div class="copyright-content">
-                                <p class="text">Designed and Developed by <a href="https://.com" rel="nofollow"></a></p>
+                                <p class="text">KingSpin AI <a href="https://.com" rel="nofollow"></a></p>
+                                <p class="text">Powered by <a href="https://.com" rel="nofollow">Tinos Software & Security Solutions</a></p>
                             </div> <!-- copyright content -->
                         </div> <!-- copyright -->
                     </div>
